--- a/payment-styles.css
+++ b/payment-styles.css
@@ -161,6 +161,14 @@
     font-weight: 500;
 }
 
+.form-help {
+    display: block;
+    margin-top: 0.25rem;
+    font-size: 0.85rem;
+    color: #666;
+    font-style: italic;
+}
+
 .form-group input,
 .form-group select {
     width: 100%;
@@ -397,6 +405,22 @@
     color: white;
     font-size: 1.5rem;
     flex-shrink: 0;
+    position: relative;
+    overflow: hidden;
+}
+
+.item-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.item-image i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .item-details {
@@ -455,6 +479,20 @@
 .total-row.total span:last-child {
     color: #667eea;
     font-size: 1.5rem;
+}
+
+.total-row.discount {
+    color: #28a745;
+    font-weight: 600;
+}
+
+.total-row.discount span:last-child {
+    color: #28a745;
+}
+
+/* Spinner Styles */
+.fa-spinner {
+    margin-right: 0.5rem;
 }
 
 /* Delivery Info */
